# Coevolution_Model

./: .gitignore  Makefile  README.md  justfile  pyproject.toml
.claude/: settings.json
.codex/: config.toml
.harness/: .current-task  workflow.md
.harness/hooks/: inject-context.py  quality-gate.py  session-start.py  track-staleness.py
.harness/index/: knowledge.jsonl
.harness/scripts/: bootstrap_env.sh  e2e_smoke.sh  hook_replay.py  hook_replay.sh  init_agent_outputs.sh  ops_manager.py  opsctl.sh  permission_audit.py  review_audit.py  run_quality_gate.sh  schedule_audit.py  stale_gate.py  task_watch.py
.harness/spec/backend/: index.md
.harness/spec/figures/: index.md
.harness/spec/lessons/: ANCHOR.md  DECODE.md  (+3 more)
configs/: default_params.yaml  repro_metrics.yaml  solver_contract.yaml
docs/repro/: p0_p1_traceability.md
scripts/: check_reproduction_metrics.py  e2e_smoke.py  fig1_stability.py  fig2_timecourse.py  fig3_spinodal.py  fig4_post_segregation.py  merge_claim_ablation_report.py  run_ablation_experiments.py  run_claim_experiments.py  search_fidelity_params.py
src/rna_llps/: __init__.py  config.py
tests/: conftest.py  test_ablation_experiments.py  test_claim_experiments.py  test_config.py  test_fidelity_search.py  test_flory_huggins.py  test_merge_claim_ablation_report.py  test_minimal_ode.py  test_ode_wrappers.py  test_ops_automation.py  test_pipeline_smoke.py  test_post_segregation.py  test_reproduction_metrics_gate.py  test_reproduction_pipeline.py  test_scalar_dynamics.py  test_smoke.py  test_solver_contract.py  test_stability_analysis.py
(+59 files in other folders)
