[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rna-llps-coevolution"
version = "0.1.0"
description = "Numerical reproduction framework for stress-driven RNA–peptide coevolution and LLPS"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Andyduck", email = "sikjmyhre@gmail.com" }
]
dependencies = [
  "numpy>=1.24,<2.0",
  "scipy>=1.11,<1.14",
  "matplotlib>=3.8,<3.11",
  "pyyaml>=6.0,<7.0",
  "tqdm>=4.66,<5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.5,<0.8",
  "build>=1.2,<2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
